# cpp_labs

./: README.md
4labOOP/: CSVparser.h  main.cpp
lab1/: BigInt.h  tests.cpp
lab2/: CMakeLists.txt  main.cpp
lab2/gamebase/: game.cpp  game.h  gameObject.cpp  gameObject.h  tamagochi.h  textureManager.cpp  textureManager.h
